We ran the static analyzer on updated version, which yields some more memory leaks that looked like real issues.
Again, nothing huge, but better to keep the record clean.
Let me know if some wont be clear -- I can post the specific reports.
We ran the static analyzer on updated version, which yields some more memory leaks that looked like real issues.
Again, nothing huge, but better to keep the record clean.
Let me know if some wont be clear -- I can post the specific reports.
| rG GnuPG | |||
| rGdd23441938d1 agent: Avoid memory leak when handling ssh keys. | |||
| rGbe40a33419c8 agent: Avoid memory leak when handling tpm2. | |||
| rG4bdd43fdca20 dotlock: Avoid leaking directory handle. | |||
| rGb1029031d473 scd: Avoid memory leak. | |||
| rGf66e9356f892 export_secret_ssh_key: Avoid memory leak. | |||
| rGe8c8068decb3 tools: Avoid memory leaks. | |||